# nlp-utils

./: nlp-utils.cabal
src/NLP/Corpora/: Dictionary.hs
test/: Spec.hs
test/NLP/Corpora/: TestDictionary.hs
