name:                nlp-utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d61h6k4/nlp-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          d61h6k4@protonmail.ch
copyright:           2017 Danil Petrov
category:            Machine learning, Natural language processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.Corpora.Dictionary
  build-depends:       base >= 4.7 && < 5
                     , hashtables >= 1.2 && < 2
                     , text >= 1.2 && < 2
                     , containers >= 0.5 && < 1
  default-language:    Haskell2010

test-suite nlp-utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       NLP.Corpora.TestDictionary
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , nlp-utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d61h6k4/nlp-utils
